Include profiler in :dev.